feat: modificacion de multiples funciones
- se agrego la docs de la loteria
