# docs/swagger.json
@@ -64,7 +64,7 @@
                 "parameters": [
                     {
                         "type": "file",
-                        "description": "Archivo CSV con los datos de los invitados | Formato CSV (nombre, invitado_por, parentesco)",
+                        "description": "Archivo CSV con los datos de los invitados | Formato CSV (nombre, invitado_por, parentesco, sorteo)",
                         "name": "Invitaciones",
                         "in": "formData",
                         "required": true
@@ -81,6 +81,26 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/entity.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/lottery": {
+            "get": {
+                "description": "Obtiene un invitado aleatorio de la lotería",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "QR"
+                ],
+                "summary": "Obtener invitado de la lotería",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.QRManagement"
                         }
                     }
                 }
@@ -172,7 +192,7 @@
                 },
                 "sorteo": {
                     "type": "string",
-                    "example": ""
+                    "example": "Si"
                 },
                 "status": {
                     "type": "string",
