# internal/infra/api/handler/qr.go
@@ -6,6 +6,7 @@ import (
 	"github.com/andresxlp/qr-system/internal/app"
 	"github.com/andresxlp/qr-system/internal/domain/dto"
 	"github.com/andresxlp/qr-system/internal/domain/entity"
+	"github.com/andresxlp/qr-system/pkg"
 	"github.com/labstack/echo/v4"
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
@@ -13,11 +14,8 @@ import (
 type QR interface {
 	GenerateQRCode(c echo.Context) error
 	ValidateQRCode(c echo.Context) error
-	GetGuestFromLoterry(c echo.Context) error
-	DeleteGuestFromLoterry(c echo.Context) error
-	//GenerateQRCodeBatch(c echo.Context) error
-	//ConfirmInvitation(c echo.Context) error
-	//CountQRCodeUsed(cntx echo.Context) error
+	GetGuestFromLottery(c echo.Context) error
+	GenerateQRCodeBatch(c echo.Context) error
 }
 
 type qr struct {
@@ -42,7 +40,7 @@ func NewQr(qrService app.QR) QR {
 func (q *qr) GenerateQRCode(c echo.Context) error {
 	ctx := c.Request().Context()
 
-	requestQr := []dto.QRManagement{}
+	requestQr := dto.QRManagement{}
 	if err := c.Bind(&requestQr); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, entity.Error{
 			Message: "Error",
@@ -55,27 +53,20 @@ func (q *qr) GenerateQRCode(c echo.Context) error {
 	return c.JSON(http.StatusOK, "QR Codes are being generated")
 }
 
-func (q *qr) GetGuestFromLoterry(c echo.Context) error {
-
+// GetGuestFromLottery
+//
+//	@Summary		Obtener invitado de la lotería
+//	@Description	Obtiene un invitado aleatorio de la lotería
+//	@Tags			QR
+//	@Produce		json
+//	@Success		200	{object} dto.QRManagement
+//	@Router			/lottery [get]
+func (q *qr) GetGuestFromLottery(c echo.Context) error {
 	ctx := c.Request().Context()
 
-	guest := q.qrService.GetGuestFromLoterry(ctx)
+	guest := q.qrService.GetGuestFromLottery(ctx)
 
 	return c.JSON(http.StatusOK, guest)
-}
-
-func (q *qr) DeleteGuestFromLoterry(c echo.Context) error {
-
-	ctx := c.Request().Context()
-
-	id, err := primitive.ObjectIDFromHex(c.Param("id"))
-	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, entity.Error{Message: err.Error()})
-	}
-
-	q.qrService.DeleteGusteFromLoterry(ctx, id)
-
-	return c.JSON(http.StatusOK, "guest deleted successfully...")
 }
 
 // GenerateQRCodeBatch
@@ -85,11 +76,11 @@ func (q *qr) DeleteGuestFromLoterry(c echo.Context) error {
 //	@Tags			QR
 //	@Accept			multipart/form-data
 //	@Produce		json
-//	@Param			Invitaciones	formData	file	true	"Archivo CSV con los datos de los invitados | Formato CSV (nombre, invitado_por, parentesco)"
+//	@Param			Invitaciones	formData	file	true	"Archivo CSV con los datos de los invitados | Formato CSV (nombre, invitado_por, parentesco, sorteo)"
 //	@Success		200				{string}	string	"Los códigos QR se están generando"
 //	@Failure		400				{object}	entity.Error
 //	@Router			/generate_batch [post]
-/*func (q *qr) GenerateQRCodeBatch(c echo.Context) error {
+func (q *qr) GenerateQRCodeBatch(c echo.Context) error {
 	ctx := c.Request().Context()
 
 	file, err := c.FormFile("Invitaciones")
@@ -109,45 +100,11 @@ func (q *qr) DeleteGuestFromLoterry(c echo.Context) error {
 	}
 
 	for _, guest := range requestQr[1:] {
-
+		q.qrService.GenerateQRCodes(ctx, guest)
 	}
-
-	q.qrService.GenerateQRCodes(ctx, guest)
 
 	return c.JSON(http.StatusOK, "QR Codes are being generated")
-}*/
-
-/*func (q *qr) DownloadQRCode(cntx echo.Context) error {
-	ctx := context.Background()
-	requestQr := dto.QrRequestCommon{}
-	if err := cntx.Bind(&requestQr); err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, entity.Error{
-			Message: "Error",
-			Data:    err.Error(),
-		})
-	}
-
-	if err := requestQr.Validate(); err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, entity.Error{
-			Message: "Error",
-			Data:    err.Error(),
-		})
-	}
-
-	qrCodeByte, err := q.qrService.DownloadQRCode(ctx, requestQr)
-	if err != nil {
-		return echo.NewHTTPError(http.StatusInternalServerError, entity.Error{
-			Message: "Error",
-			Data:    err.Error(),
-		})
-	}
-
-	cntx.Response().Header().Set(echo.HeaderContentType, echo.MIMEApplicationJSON)
-	return cntx.JSON(http.StatusOK, entity.Success{
-		Message: "Success",
-		Data:    qrCodeByte,
-	})
-}*/
+}
 
 // ValidateQRCode
 //
@@ -179,21 +136,3 @@ func (q *qr) ValidateQRCode(c echo.Context) error {
 		Data:    infoGuest,
 	})
 }
-
-/*
-func (q *qr) ConfirmInvitation(c echo.Context) error {
-
-	ctx := c.Request().Context()
-
-	id, err := primitive.ObjectIDFromHex(c.Param("id"))
-	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, entity.Error{Message: err.Error()})
-	}
-
-	err = q.qrService.ConfirmInvitation(ctx, id)
-	if err != nil {
-		return err
-	}
-
-	return c.JSON(http.StatusOK, entity.Success{Message: "Invitation Confirmed"})
-}*/
